data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1932.wast
;; 3. **Test Description**:    - **Constraint Checked**: Correct stack unwinding for forward jumps.    - **Details**: Create a scenario where `br_table` branches forward to a block, ensuring the operand stack unwinds correctly with the appropriate values.    - **Relation to Edge Case**: Ensures that stack unwinding conforms to target block output types, validating error handling in mismatched unwinding.

(assert_invalid
  (module
    (func $test_stack_unwinding_forward_jump
      (block (result i32)
        (i32.const 1) (i32.const 2)
        (br_if 0 (i32.const 1))
        (i32.const 3)
      )
      (drop)
    )
  )
  "type mismatch"
)